# neovim-package-info

./: .travis.yml  Cargo.toml  README.md  install.sh
examples/: Pipfile
plugin/: neovim-package-info.vim  package-info-rs.vim
src/: consts.rs  main.rs
src/cache/: mod.rs
src/fetcher/: mod.rs
src/neovim/: cache.rs  event_handler.rs  mod.rs  neovim_session.rs
src/parser/: cargo_parser.rs  mod.rs  package_json.rs  pipfile.rs
src/parser/examples/: Cargo.toml
src/store/: cratesio.rs  mod.rs  npm.rs  pypi.rs
