[package]
name = "neovim-package-info"
version = "0.1.0"
authors = ["Federico Dolce <psykopear@gmail.com>"]
edition = "2018"

[dependencies]
cargo_toml = "0.6.4"
neovim-lib = "0.6.1"
reqwest = "0.9.16"
semver = "0.9.0"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
toml = "0.5.0"
rayon = "1.0.3"
failure = "0.1.5"
