[package]
authors = ["Author"]
build = "build.rs"
categories = ["command-line-utilities"]
description = "Description"
keywords = ["keyword"]
license = "License"
name = "name"
readme = "./README.md"
repository = "https://github.com/Author/name"
version = "0.14.0"
edition = "2018"

[[bin]]
name = "name"
path = "src/main.rs"

[build-dependencies]
clap = "1.0.0"
version_check = "0.1.3"

[dependencies]
ansi_term = "0.10"
libc = "0.2.44"
lscolors = "0.5.0"
serde = { version = "~1.0",  features = ["derive"] }
users = "0.8.0"

[dependencies.clap]
features = ["suggestions", "color", "wrap_help"]
version = "2.32.0"

[dev-dependencies]
tempdir = "0.3.7"

[features]
sudo = []
